force-app/main/default/objects/CoIT_Customer_Notificacion__c/CoIT_Customer_Notificacion__c.object-meta.xml
<CustomObject>
    <label>Customer Notificacion</label>
    <nameField>
        <displayFormat>CNM-{000000000}</displayFormat>
        <label>Customer Notificacion Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Notificacions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>