force-app/main/default/objects/CoIT_Customer_Notificacion__c/fields/CoIT_Case__c.field-meta.xml
<CustomField>
    <fullName>CoIT_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Customer Notificacions</relationshipLabel>
    <relationshipName>Customer_Notificacions</relationshipName>
    <type>Lookup</type>
</CustomField>