force-app/main/default/objects/CoIT_Customer_Notificacion__c/fields/CoIT_Customer_Email__c.field-meta.xml
<CustomField>
    <fullName>CoIT_Customer_Email__c</fullName>
    <label>Customer Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>