force-app/main/default/objects/CoIT_Customer_Notificacion__c/fields/CoIT_Nombre_Cliente__c.field-meta.xml
<CustomField>
    <fullName>CoIT_Nombre_Cliente__c</fullName>
    <label>Nombre Cliente</label>
    <length>255</length>
    <type>Text</type>
</CustomField>