force-app/main/default/objects/CoIT_Customer_Notificacion__c/fields/CoIT_Notificacion__c.field-meta.xml
<CustomField>
    <fullName>CoIT_Notificacion__c</fullName>
    <label>Notificacion</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>