force-app/main/default/objects/CoIT_Customer_Notificacion__c/fields/CoIT_Numero_Autorizacion__c.field-meta.xml
<CustomField>
    <fullName>CoIT_Numero_Autorizacion__c</fullName>
    <label>Numero Autorizacion</label>
    <length>15</length>
    <type>Text</type>
</CustomField>