force-app/main/default/objects/CoIT_Customer_Notificacion__c/fields/CoIT_Numero_Cliente__c.field-meta.xml
<CustomField>
    <fullName>CoIT_Numero_Cliente__c</fullName>
    <label>Numero Cliente</label>
    <length>200</length>
    <type>Text</type>
</CustomField>