force-app/main/default/objects/CoIT_Customer_Notificacion__c/fields/CoIT_Response__c.field-meta.xml
<CustomField>
    <fullName>CoIT_Response__c</fullName>
    <label>Response</label>
    <length>255</length>
    <type>Text</type>
</CustomField>