force-app/main/default/objects/CoIT_Customer_Notificacion__c/fields/CoIT_Service_Appointment__c.field-meta.xml
<CustomField>
    <fullName>CoIT_Service_Appointment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Appointment Number</label>
    <referenceTo>ServiceAppointment</referenceTo>
    <relationshipLabel>Customer Notificacions</relationshipLabel>
    <relationshipName>Customer_Notificacions</relationshipName>
    <type>Lookup</type>
</CustomField>