force-app/main/default/objects/CoIT_Customer_Notificacion__c/fields/CoIT_Status_Service_Appointment__c.field-meta.xml
<CustomField>
    <fullName>CoIT_Status_Service_Appointment__c</fullName>
    <label>Status Service Appointment</label>
    <length>64</length>
    <type>Text</type>
</CustomField>