force-app/main/default/objects/CoIT_Customer_Notificacion__c/fields/CoIT_SurvercateTemplate__c.field-meta.xml
<CustomField>
    <fullName>CoIT_SurvercateTemplate__c</fullName>
    <label>Template</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>