force-app/main/default/objects/CoIT_Customer_Notificacion__c/fields/CoIT_Work_Order__c.field-meta.xml
<CustomField>
    <fullName>CoIT_Work_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Order</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipLabel>Customer Notificacions</relationshipLabel>
    <relationshipName>Customer_Notificacions</relationshipName>
    <type>Lookup</type>
</CustomField>