force-app/main/default/objects/CoIT_Customer_Notificacion__c/listViews/All_Notificacion.listView-meta.xml
<ListView>
    <fullName>All_Notificacion</fullName>
    <columns>NAME</columns>
    <columns>CoIT_Work_Order__c</columns>
    <columns>CoIT_Service_Appointment__c</columns>
    <columns>CoIT_Status_Service_Appointment__c</columns>
    <columns>CoIT_Response__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CoIT_Numero_Autorizacion__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CoIT_Numero_Autorizacion__c</field>
        <operation>equals</operation>
        <value>5604675</value>
    </filters>
    <label>All Notificacion</label>
</ListView>